Finished part 2 of material design tutorial: http://frogermcs.github.io/Instagram-with-Material-Design-concept-part-2-Comments-transition/

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
             android:name=".ui.activity.BaseActivity"
             android:label="@string/title_activity_base" >
         </activity>
+        <activity
+            android:name=".ui.activity.CommentsActivity"
+            android:label="@string/title_activity_comments"
+            android:theme="@style/AppTheme.CommentsActivity">
+        </activity>
     </application>
 
 </manifest>
