--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile 'com.facebook.rebound:rebound:0.3.6'
+    compile 'com.squareup.picasso:picasso:2.5.0'
 }
