--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:design:22.2.1'
     compile 'com.facebook.rebound:rebound:0.3.6'
     compile 'com.squareup.picasso:picasso:2.5.0'
+
+    compile 'com.commonsware.cwac:camera:0.6.12'
 }
