--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".ui.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,7 +49,12 @@
             android:name=".ui.activity.TakePhotoActivity"
             android:label="@string/title_activity_take_photo"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.TransparentActivity.FullScreen">
+            android:theme="@style/AppTheme.TransparentActivity.FullScreen" >
+        </activity>
+        <activity
+            android:name=".ui.activity.PublishActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_publish" >
         </activity>
     </application>
 
